--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
     "mongoose": "^4.13.7",
     "morgan": "~1.9.0",
     "serve-favicon": "~2.4.5"
+  },
+  "devDependencies": {
+    "jsonwebtoken": "^8.1.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.4.0"
   }
 }
